--- a/values.yaml
+++ b/values.yaml
@@ -65,7 +65,6 @@ images:
   initContainer:
     initStorage: onlyoffice/4testing-docspace-bin-share
     waitStorage: onlyoffice/4testing-docspace-wait-bin-share
-  backup: onlyoffice/4testing-docspace-backup
   filesServices: onlyoffice/4testing-docspace-files-services
   notify: onlyoffice/4testing-docspace-notify
   socket: onlyoffice/4testing-docspace-socket
@@ -73,7 +72,6 @@ images:
   studioNotify: onlyoffice/4testing-docspace-studio-notify
   studio: onlyoffice/4testing-docspace-studio
   clearEvents: onlyoffice/4testing-docspace-clear-events
-  backupBackgroundTasks: onlyoffice/4testing-docspace-backup-background
   doceditor: onlyoffice/4testing-docspace-doceditor
   login: onlyoffice/4testing-docspace-login
   tag: v1.0.0
@@ -984,6 +982,118 @@ backup:
   # ref: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
   # backup.resources.requests The requested resources for the Backup container
   # backup.resources.limits The resources limits for the Backup container
+  resources:
+    requests:
+      memory: "256Mi"
+      cpu: "100m"
+    limits:
+      memory: "2Gi"
+      cpu: "2000m"
+
+# DocSpace Backup Background Tasks StatefulSet parameters
+#
+backupBackgroundTasks:
+  # Update strategy used to replace old Pods by new ones
+  updateStrategy:
+    # backupBackgroundTasks.updateStrategy.type Backup Background Tasks StatefulSet update strategy type
+    # Allowed values: `RollingUpdate` or `OnDelete`
+    type: RollingUpdate
+  # Pod affinity rules for backupBackgroundTasks Pod scheduling by nodes relative to other Pods
+  # Pod affinity allow you to constrain which nodes Backup Background Tasks Pods can be scheduled on based on the labels of Pods already running on that node
+  # ref: https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#inter-pod-affinity-and-anti-affinity
+  # Example:
+  # podAffinity:
+  #   preferredDuringSchedulingIgnoredDuringExecution:
+  #   - weight: 100
+  #     podAffinityTerm:
+  #       labelSelector:
+  #         matchExpressions:
+  #         - key: app
+  #           operator: NotIn
+  #           values:
+  #           - database
+  #       topologyKey: kubernetes.io/hostname
+  podAffinity: {}
+  # Node affinity rules for Backup Background Tasks Pod scheduling by nodes
+  # Node affinity allow you to constrain which nodes Backup Background Tasks Pod can be scheduled on based on node labels
+  # ref: https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#node-affinity
+  # Example:
+  # nodeAffinity:
+  #   preferredDuringSchedulingIgnoredDuringExecution:
+  #   - weight: 100
+  #     preference:
+  #       matchExpressions:
+  #       - key: kubernetes.io/name
+  #         operator: In
+  #         values:
+  #         - name1
+  #         - name2
+  nodeAffinity: {}
+  # Backup Background Tasks container image parameters
+  image:
+    # backupBackgroundTasks.image.repository Backup Background Tasks container image repository
+    repository: onlyoffice/4testing-docspace-backup-background
+    # backupBackgroundTasks.image.tag Backup Background Tasks container image tag
+    # If set to, it takes priority over the `images.tag`
+    tag: ""
+    # backupBackgroundTasks.image.pullPolicy Backup Background Tasks container image pull policy
+    pullPolicy: IfNotPresent
+  # backupBackgroundTasks.containerPorts.app Backup Background Tasks container port
+  containerPorts:
+    app: 5050
+  # Probe used for the Backup Background Tasks container: startup, readiness and liveness probes
+  # ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
+  # The parameters below for startup probes are used only when `backupBackgroundTasks.startupProbe.enabled=true`
+  startupProbe:
+    # backupBackgroundTasks.startupProbe.enabled Enable startupProbe for Backup Background Tasks container
+    enabled: false
+    httpGet:
+      # backupBackgroundTasks.startupProbe.httpGet.path Checking the path for startupProbe
+      path: /liveness
+      # backupBackgroundTasks.startupProbe.httpGet.port Checking the port for startupProbe
+      port: 5050
+    # backupBackgroundTasks.startupProbe.failureThreshold Failure threshold for startupProbe
+    failureThreshold: 30
+    # backupBackgroundTasks.startupProbe.periodSeconds Period seconds for startupProbe
+    periodSeconds: 10
+  # The parameters below for readiness probes are used only when `backupBackgroundTasks.readinessProbe.enabled=true`
+  readinessProbe:
+    # backupBackgroundTasks.readinessProbe.enabled Enable readinessProbe for Backup Background Tasks container
+    enabled: false
+    # backupBackgroundTasks.readinessProbe.failureThreshold Failure threshold for readinessProbe
+    failureThreshold: 2
+    httpGet:
+      # backupBackgroundTasks.readinessProbe.httpGet.path Checking the path for readinessProbe
+      path: /liveness
+      # backupBackgroundTasks.readinessProbe.httpGet.port Checking the port for readinessProbe
+      port: 5050
+    # backupBackgroundTasks.readinessProbe.periodSeconds Period seconds for readinessProbe
+    periodSeconds: 10
+    # backupBackgroundTasks.readinessProbe.successThreshold Success threshold for readinessProbe
+    successThreshold: 1
+    # backupBackgroundTasks.readinessProbe.timeoutSeconds Timeout seconds for readinessProbe
+    timeoutSeconds: 3
+  # The parameters below for liveness probes are used only when `backupBackgroundTasks.livenessProbe.enabled=true`
+  livenessProbe:
+    # backupBackgroundTasks.livenessProbe.enabled Enable livenessProbe for Backup Background Tasks container
+    enabled: false
+    # backupBackgroundTasks.livenessProbe.failureThreshold Failure threshold for livenessProbe
+    failureThreshold: 3
+    httpGet:
+      # backupBackgroundTasks.livenessProbe.httpGet.path Checking the path for livenessProbe
+      path: /liveness
+      # backupBackgroundTasks.livenessProbe.httpGet.port Checking the port for livenessProbe
+      port: 5050
+    # backupBackgroundTasks.livenessProbe.periodSeconds Period seconds for livenessProbe
+    periodSeconds: 10
+    # backupBackgroundTasks.livenessProbe.successThreshold Success threshold for livenessProbe
+    successThreshold: 1
+    ## backupBackgroundTasks.livenessProbe.timeoutSeconds Timeout seconds for livenessProbe
+    timeoutSeconds: 5
+  # Backup Background Tasks container resource requests and limits
+  # ref: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
+  # backupBackgroundTasks.resources.requests The requested resources for the Backup Background Tasks container
+  # backupBackgroundTasks.resources.limits The resources limits for the Backup Background Tasks container
   resources:
     requests:
       memory: "256Mi"
